<resources>
    <string name="app_name">GuessingGame</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_game">New Game</string>
    <string name="action_game_stats">Game Stats</string>
    <string name="action_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reno_s_guessing_game">RENO\'S GUESSING GAME</string>
    <string name="lblOutput">Enter a number and then tap guess</string>
    <string name="guess">GUESS!</string>
    <string name="lblExplanation">Enter a number between 1 and 100:</string>
    <string name="txtGuessHint">0</string>
    <string name="todo">TODO</string>
</resources>